...
              width: 250,
              image: AssetImage('images/logoEiBoard.png'),
            ),
            const SizedBox(height: 20),
            Button(
              "LOGIN",
              key: const Key('LogInButton'),
              () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (context) {
                      return const LoginScreen();
...
                  ),
                );
              },
            ),
            const SizedBox(height: 30),
            ElevatedButton(
              key: const Key('SignUp'),
              onPressed: () {
                Navigator.push(
                  context,
                  MaterialPageRoute(
                    builder: (context) {
                      return const SignUpScreen();
...
