...
      if (widget.repeatPassword) const SizedBox(height: 15),
      if (widget.repeatPassword)
        SizedBox(
          width: 302,
          height: 69,
          child: TextFormField(
            key: const Key('PasswordInput2'),
            cursorColor: LightStandardTheme.colorPrimary,
            focusNode: focusNode2,
            decoration: InputDecoration(
              labelText: 'Repeat Password',
              fillColor: Colors.white,
              border: OutlineInputBorder(
...
